# polite-lib

./: .gitignore  README.md  Taskfile.yaml  pyproject.toml
.github/: dependabot.yaml  validate.yaml
.github/workflows/: build-validate-release.yaml  dependabot.yaml  release-validate.yaml  validate-and-release.yaml  validate-before-stage.yaml  validate-release.yaml  validate-stage.yaml  validate.yaml
scripts/: install-polite-lib.sh  power-cost.py
src/: requirements.txt  setup.py
src/polite_lib/: version.py
src/polite_lib/file_tools/: backblaze.py  convert.py  file_tools.py  minio.py
src/polite_lib/fmt/: fmt_html.py  fmt_rich.py
src/polite_lib/notify/: quigley_notify.py
src/polite_lib/utils/: convert.py  date_utils.py  dict_tools.py  dyn_import.py  file_tools.py  fmt_numbers.py  fmt_nums.py  fmt_rich.py  hash.py  html.py  mathy.py  sys_tools.py  xlate.py
tests/: requirements.txt  test.py
tests/unit/file_tools/: test_file_tools.py
tests/unit/fmt/: test_fmt_html.py  test_fmt_nums.py  test_html.py
tests/unit/utils/: test_convert.py  test_date_utils.py  test_dict_utils.py  test_fmt_nums.py  test_hash.py  test_html.py  test_xlate.py
