[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "polite-lib"
version = "0.0.9.11"
description = ""
authors = ["Alix <me@politeauthority.io>"]
readme = "README.md"
packages = [{ include = "polite_lib", from = "src" }]
homepage = "https://github.com/politeauthority/polite-lib"

[tool.poetry.dependencies]
python = "^3.10.0"
arrow = "1.3.0"
flake8 = "7.0.0"
b2sdk = "2.2.1"
glom = "23.5.0"
minio = "7.2.7"
requests = ">=2.32.4"
rich = "13.7.1"
